SpringBoot2.0 基础案例(09)：集成JPA持久层框架,简化数据库操作

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,8 @@
         <module>node07-boot-druid</module>
         <!-- SpringBoot 2.0 引入Redis缓存服务 -->
         <module>node08-boot-redis</module>
+        <!-- SpringBoot 2.0 引入JAP数据操作 -->
+        <module>node09-boot-jpa</module>
     </modules>
 
     <!-- 依赖版本管理 -->
