SpringBoot2.0 基础案例(11)：配置AOP切面编程,解决日志记录业务

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,8 @@
         <module>node09-boot-jpa</module>
         <!-- SpringBoot 2.0 整合Mybatis框架 -->
         <module>node10-boot-mybatis</module>
+        <!-- SpringBoot 2.0 配置AOP切面编程 -->
+        <module>node11-boot-aop</module>
     </modules>
 
     <!-- 依赖版本管理 -->
