--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,8 @@
         <module>node12-boot-transaction</module>
         <!-- SpringBoot 2.0 Cache注解 -->
         <module>node13-boot-cache</module>
+        <!-- SpringBoot 2.0 文件管理 -->
+        <module>node14-boot-file</module>
     </modules>
 
     <!-- 依赖版本管理 -->
